case-study-page.css
/* ... */
img.can-zoom.zoom {width:100%;}

.case-study > footer a {border:none!important;vertical-align:middle;display:inline-block;}
.fa-linkedin:hover {color:#3177B0;}
.fa-mailbox:hover {color:#db0029;}
.fa-sms:hover {color:#54B852;}

figure {margin:0;}
picture.full-width source, picture.full-width img {width:100%;margin:0 auto;}

@media (prefers-color-scheme:dark){
	.case-study > footer a {color:#777!important;}
	picture.full-width {opacity:.8;}
	picture.full-width:hover, picture.full-width:active, picture.full-width:focus {opacity:1;}
}

/* DEMO-PLAYER STYLES */
a.play, a.player {border:none;cursor:pointer;}
a.play::after, a.player::after {content:'\f144';display:inline-block;font-family:'Font Awesome 6 Pro';font-weight:900;margin-left:5px;}
#demo-player {background-color:rgba(0,0,0,0.75);cursor:pointer;display:none;padding:0;margin:0;position:fixed;top:0;right:0;bottom:0;left:0;z-index:55;}
#demo-player .container {display:flex;flex-flow:column;height:80vh;justify-content:center;}
#demo-player * {color:white;text-align:center;}
#demo-player p {font-size:36px;position:absolute;top:40vh;right:0;left:0;}
#demo-player footer {background:none;padding:10px 0;}
#demo-player span {z-index:7;min-height:10vh;}
#demo-player img {max-width:600px;width:90%;margin:0 auto;}
@media(max-width:500px){#demo-player p {font-size:28px;padding-top:60px;} iframe {max-height:300px;}}


/* DISMISS CASE STUDY */
#dismiss {background-color:#144567;border-radius:60px;color:white;display:inline-flex;font-weight:bold;justify-content:center;text-align:center;transition:all 250ms;width:48px;height:48px;position:fixed;right:8px;bottom:8px;z-index:50;}
#dismiss.bottom, #dismiss:hover {border-radius:0;padding:4px 6px;width:calc(100% - 12px);right:0;bottom:0;}
#dismiss:hover {cursor:pointer;}
@media (prefers-color-scheme:dark){#dismiss {background-color:var(--text);color:var(--bg-primary);}}

#dismiss::before {content:'\f00d';display:inline-block;font-family:'Font Awesome 6 Pro';font-size:28px;font-weight:300;line-height:48px;transition:opacity 250ms;flex-grow:1;text-align:center;}
#dismiss.bottom::before, #dismiss:hover::before {opacity:0;width:0;}

#dismiss span {display:inline-block;line-height:48px;opacity:0;overflow:hidden;transition:width 250ms;white-space:nowrap;width:0;}
#dismiss.bottom span, #dismiss:hover span {width:100%;opacity:1;}

@media (min-width:860px){
	#dismiss {right:calc(50vw - 405px - 24px);top:8px;bottom:unset;}
	#dismiss:hover {border-radius:14px;width:798px;right:calc(50vw - 405px);}
	#dismiss:hover::after {content:'';width:64px;position:absolute;top:0;right:-24px;bottom:0;}
}
/* INCOMPLETE STYLES */
.incomplete header::after {content:'Coming soon!';left:-88px;}

/* PRESENTATION STYLES */
.presentation header::after {content:'Presentation';left:-82px;}
.presentation slideCount {color:var(--text-med);display:inline-block;margin-left:10px;}
.presentation slideCount::before {content:'(';}
.presentation slideCount::after {content:' slides)';}

/* WHAT-IS STYLES */
.what-is {cursor:pointer;display:inline-block;position:relative;}
.what-is::after {color:var(--brand);content:'\f0d7';font-family:'Font Awesome 6 Pro';font-weight:900;margin-left:5px;}
.what-is.open::after {content:'\f0d8';}
.def, .disclaimer {display:block;padding-left:1em;border-left:3px solid var(--text-med);border-left-color:var(--brand);}
.def.hidden {display:none;}
.def img {max-width:100%;}

:root {
	--brand-dark:var(--brand);
}

